--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Shopping Bag</title>
   </head>
-  <body>
+  <body class="container">
     <header>
-      <div>Guaranteed Awesome!</div>
-      <h1>Welcome to MEAN Tea!</h1>
+      <div id="guarantee">Guaranteed Awesome!</div>
+      <h1 id="page-title">Welcome to MEAN Tea!</h1>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
