--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
+    <script type="text/javascript" src="js/directives.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Shopping Bag</title>
+    <title>Shake Shop</title>
   </head>
   <body class="container">
     <header>
-      <div id="guarantee">Guaranteed Awesome!</div>
-      <h1 id="page-title">Welcome to MEAN Tea!</h1>
+      <div id="guarantee">Shake Shop Milkshake Delivery</div>
+      <h1 id="page-title">Welcome to the Shake Shop!</h1>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -33,8 +34,8 @@
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
               <li><a href="#/">Home</a></li>
-              <li><a href="#/">About</a></li>
-              <li><a href="#/">Contact</a></li>
+              <!-- <li><a href="#/">About</a></li> -->
+              <!-- <li><a href="#/">Contact</a></li> -->
             </ul>
           </div>
         </div>
